clean affected alert

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -798,7 +798,7 @@ html:lang(fr) .cnjnctn-or:before {
       </ul>
       <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681153" target="_blank">UHTN1, Owner of residential property</a></p>
     </details>
-    <h3>Affected owner</h3>
+    <h3 id="aff2">Affected owner</h3>
     <p>As an affected owner, you <strong>must file</strong> an annual return.</p>
     <p>If you own more than one residential property in Canada, you must file a separate return for <strong>each property</strong>.</p>
     <p>If you are one of several affected owners of the residential property, <strong>each of you</strong> must file a separate return for the property. </p>
@@ -973,9 +973,8 @@ html:lang(fr) .cnjnctn-or:before {
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
                   <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax">exemption</a>.</p>
-                  <p>If you own more than one residential property in Canada, you must file a separate return for each property.</p>
-                  <p>If you are one of several affected owners of the residential property, each of you must file a separate return for the property.</p>
-                  <br>
+                 <p>Read more: <a href="#aff2">Affected owners</a></p>
+			<br>
                   <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">UHTN1, Affected owners</a></p>
                 </div>
                 <br>
@@ -1042,9 +1041,8 @@ html:lang(fr) .cnjnctn-or:before {
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
                   <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax">exemption</a>.</p>
-                  <p>If you own more than one residential property in Canada, you must file a separate return for each property.</p>
-                  <p>If you are one of several affected owners of the residential property, each of you must file a separate return for the property.</p>
-                  <br>
+                 <p>Read more: <a href="#aff2">Affected owners</a></p>
+			<br>
                   <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">UHTN1, Affected owners</a></p>
                 </div>
                 <br>
