--- a/payroll/guidance/factors-federal2.html
+++ b/payroll/guidance/factors-federal2.html
@@ -75,27 +75,26 @@
 <p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
 </div>
 
-<p>It is important to determine if a worker is an <strong>employee</strong>, a <strong>self-employed individual</strong> or a <strong>personal services business</strong>. Employment status directly impact on how a worker is treated under specific legislation such as the <a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">Canada Pension Plan</a>, <a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">Employment Insurance Act</a> and the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-3.3/index.html">Income Tax Act</a>.</p>
+<p>It is important to determine if a worker is an <strong>employee</strong>, a <strong>self-employed individual</strong> or has a <strong>personal services business</strong> (PSB). Employment status directly impacts on how a worker is treated under specific legislation such as the <a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">Canada Pension Plan</a>, <a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">Employment Insurance Act</a> and the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-3.3/index.html">Income Tax Act</a>.</p>
 
 
 <details><summary>Different employment status for tax purposes</summary>
   	
-<p>The main types of employment status are:</p>
+<p>The main types of employment statuses are:</p>
  <ul class="fa-ul">
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> Employee </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Self-employed and contractor </li>
-<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Personal services business </li>
+<li><span class="fas fa-check fa-li fa-lg text-success"> </span> Self-employed and contractor, including a personal services business </li>
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> Director </li>
 <li><span class="fas fa-check fa-li fa-lg text-success"> </span> Office holder </li>
 </ul>
-<h3 id="overview_2">Tax law vs employment law</h3>
+<h3 id="overview_2">Tax law vs. employment law</h3>
 <p>An individual may be an employee in employment law but have a different status under the tax law. As an employer or a payer, you must work out each worker’s status in both employment law and tax law.</p>
 <details><summary>Tax law</summary>
 <p>The CRA determine the employment relationship on the basis of common law and the CPP, EI legislation and the ITA (and the Quebec Civil Code for Quebec employees). </p>
 </details>
 <details><summary>Employment law</summary>
 <h4>Canada Labour Code</h4>
-<p>The Employment and Social Development Canada are responsible to enforce the Canada Labour Code. The federal labout standards set out the employment conditions for hours of work, payment of wages, leaves, vacation, holidays, and more. These standards apply to employees working in federally regulated businesses. </p>
+<p>The Employment and Social Development Canada are responsible to enforce the Canada Labour Code. The federal labour standards set out the employment conditions for hours of work, payment of wages, leaves, vacation, holidays, and more. These standards apply to employees working in federally regulated businesses. </p>
 <p>Learn more: <a href="https://www.canada.ca/en/services/jobs/workplace/federal-labour-standards.html">Federal labour standards</a>.</p>
 <h4>Province or Territory Labour Code</h4>
 <p>If the employee is <strong>not </strong>working in a federally regulated industry, the province or territory is responsible to enforce the Labour Code. </p>
