--- a/payroll/guidance/factors-federal2.html
+++ b/payroll/guidance/factors-federal2.html
@@ -120,17 +120,104 @@
 <hr>
 
 <h2 id="stepcon">Determine if a contract is valid</h2> 
-<p>Answer the question to confirm the contract is valid.</p>
-<p>Add yes and no button, including the info to make this decision.</p>
+<p>Answer a few questions to determine if a contract is valid.</p>
+<p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
+  <div id="interactive">
+<div id="ajax-q1-contract"><div class="wb-frmvld gc-font-2019"><form method="get">
+	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
+		<p>Is there compensation or reward for a party to carry out its obligations under the contract?</p>
+		<ul>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-q1-contract-yes", "live": true}'>Yes</li>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-q1-contract-no", "live": true}'>No </li>
+		</ul>
+	</div>
+
+<div id="ajax-q1-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+
+<h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Contract is valid</h4>
+<p>Add info here</p>
+ </div>
+
+
+<div id="ajax-q1-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+<h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Contract is not valid</h4>
+<p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
+</div>
+
+</form></div></div>
+<div id="ajax-q2-contract"><div class="wb-frmvld gc-font-2019"><form method="get">
+	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
+		<p>Are the parties involved legally capable of entering into a contract?</p>
+		<ul>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-q2-contract-yes", "live": true}'>Yes</li>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-q2-contract-no", "live": true}'>No </li>
+		</ul>
+	</div>
+
+<div id="ajax-q2-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+
+<h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Contract is valid</h4>
+<p>Add info here</p>
+ </div>
+
+
+<div id="ajax-q2-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+<h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Contract is not valid</h4>
+<p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
+</div>
+
+</form></div></div>
+<div id="ajax-q3-contract"><div class="wb-frmvld gc-font-2019"><form method="get">
+	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
+		<p>Is the object of the contract legitimate?</p>
+		<ul>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-q3-contract-yes", "live": true}'>Yes</li>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-q3-contract-no", "live": true}'>No </li>
+		</ul>
+	</div>
+
+<div id="ajax-q3-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+
+<h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Contract is valid</h4>
+<p>Add info here</p>
+ </div>
+
+
+<div id="ajax-q3-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+<h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Contract is not valid</h4>
+<p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
+</div>
+
+</form></div></div>
+<div id="ajax-q4-contract"><div class="wb-frmvld gc-font-2019"><form method="get">
+	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
+		<p>Is the agreement mutual? For example, the parties must have the intention to enter into the contract and be bound by its terms</p>
+		<ul>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-q4-contract-yes", "live": true}'>Yes</li>
+		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-q4-contract-no", "live": true}'>No </li>
+		</ul>
+	</div>
+
+<div id="ajax-q4-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+
+<h4><span class="fas fa-people-arrows text-primary fa-1x"> </span> Indicator: Contract is valid</h4>
+<p>Add info here</p>
+ </div>
+
+
+<div id="ajax-q4-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-info">
+<h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Contract is not valid</h4>
+<p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
+</div>
+
+</form></div></div>
+
 <hr>
 
 <h2 id="stepa">Determine if the worker is an incorporated employee</h2> 
 <p>Answer a few questions to determine if the worker is an incorporated employee. If the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes. </p>		  
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
-  <div id="interactive">
-<div class="wb-frmvld gc-font-2019">  <form>
-
-
+ <div class="wb-frmvld gc-font-2019">  <form>
  <div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "inline":true, "noForm": true, "isoptional": true}'>
 		<p>Does the worker provide their services through another corporation? </p>
 		<ul>
@@ -183,7 +270,7 @@
 		<ul>
 		 <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb5yes", "live": true}'>Yes</li>
 		<li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb1no", "live": true}'>No </li>
-         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb5not", "live": true}'>No sure</li>
+         <li data-wb-fieldflow='{"action": "toggle", "toggle": "#ajax-psb5not", "live": true}'>Not sure</li>
 		</ul>
 	</div>		
 			</li>
