bold affected alert

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -973,7 +973,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
-                  <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax">exemption</a>.</p>
+                  <p>You will also have to <strong>pay the tax</strong> unless you qualify for an <a href="#exempttax">exemption</a>.</p>
                  <p>Read more: <a href="#aff2">Affected owners</a></p>
 			<br>
                   <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">UHTN1, Affected owners</a></p>
@@ -1041,7 +1041,7 @@ html:lang(fr) .cnjnctn-or:before {
                   <h4 class="h3"><small>Based on your choice, your result is:</small><br>
                     You are an affected owner</h4>
                   <p>You <strong>must file</strong> a return for the residential property. </p>
-                  <p>You will also have to pay the tax unless you qualify for an <a href="#exempttax">exemption</a>.</p>
+                  <p>You will also have to <strong>pay the tax</strong> unless you qualify for an <a href="#exempttax">exemption</a>.</p>
                  <p>Read more: <a href="#aff2">Affected owners</a></p>
 			<br>
                   <p>Review tax notice: <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/publications/uhtn1/introduction-underused-housing-tax.html#_Toc122681156" target="_blank">UHTN1, Affected owners</a></p>
