bold vacation exemption

--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -1259,7 +1259,7 @@ html:lang(fr) .cnjnctn-or:before {
             <p>You may be exempt if the property is:</p>
             <div id="exp-3">
               <ul>
-                <li>A vacation property located in an eligible area of Canada and used by you or your spouse or common-law partner for at least 28 days in the calendar year</li>
+                <li>A vacation property located in an <strong>eligible area of Canada</strong> and used by you or your spouse or common-law partner for at least 28 days in the calendar year</li>
               </ul>
               <p><span class="fas fa-search-location fa-lg pull-left mrgn-rght-sm"></span>Determine if your residential property is located in an eligible area of Canada for the purposes of this exemption by using the <a href="https://apps.cra-arc.gc.ca/ebci/sres/ext/pub/ntrUhtExpnTl?request_locale=en_CA" target="_blank">Underused housing tax vacation property designation tool</a>.</p>
             </div>
