--- a/gcweb-proposals/dl-list.html
+++ b/gcweb-proposals/dl-list.html
@@ -27,17 +27,18 @@
          </script>
 <style>
 @media (min-width: 768px) {
-dl.dl-horizontal.max-content {
+media (min-width: 768px) {
+dl.dl-horizontal.max-dt {
     display: grid;
     grid-template-columns: minmax(min-content, min-content) auto;
 }
-dl.dl-horizontal.max-content dt {
+dl.dl-horizontal.max-dt dt {
     width: auto;
 }
-dl.dl-horizontal.max-content dd {
+dl.dl-horizontal.max-dt dd {
     margin-left: 0;
 }
-	dl.dl-horizontal.gc-dt dt {width: 200px;}	
+	dl.dl-horizontal dt {width: 20ch;}	
 
 
  .dl-horizontal.v13_5 dt {
