--- a/subway/uht/who-file.html
+++ b/subway/uht/who-file.html
@@ -842,12 +842,19 @@ html:lang(fr) .cnjnctn-or:before {
                 <ul>
                   <li>A citizen or permanent resident of Canada
                     <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
-                      <p>Do you own the residential property as a trustee of a mutual fund trust, real estate investment trust, or specified investment flow-through (SIFT) trust for Canadian income tax purposes?</p>
-                      <ul>
+                 <p>For Canadian income tax purposes, do you own the residential property as a trustee of a:</p>
+			    <ul>
+				    <li>Mutual fund trust</li>
+				    <li>Real estate investment trust</li>
+				    <li>Specified investment flow-through (SIFT) trust </li>
+			    </ul>
+			    
+			    
+			        <ul>
                         <li data-wb-fieldflow='{"action": "removeClass", "source": "#excluded-owner", "class": "hidden", "live": true}'>Yes</li>
                         <li>No
                           <div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "gcChckbxrdio":true, "noForm": true, "isoptional": true, "default": {"action": "addClass", "source": "#excluded-owner, #affected-owner, #affected-owner-corp, #unsure-owner, #exemption-yes, #exemption-no", "class": "hidden", "live": true}}'>
-                            <p>Do you own the residential property as a trustee  of a trust (other than as a personal representative of a deceased individual)?</p>
+                            <p>Do you own the residential property as a trustee  of any other type of trust (other than as a personal representative of a deceased individual)?</p>
                             <ul>
                               <li data-wb-fieldflow='{"action": "append", "source": "#affected-owner"}'>Yes</li>
                               <li>No
