--- a/gcweb-proposals/dl-list.html
+++ b/gcweb-proposals/dl-list.html
@@ -43,7 +43,7 @@ dl.dl-horizontal.max-dt dd {
 
  .dl-horizontal.v13_5 dt {
     float: left;
-    width: 160px;
+    width: 20ch;
     clear: left;
     text-align: right;
     overflow: hidden;
