--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -94,7 +94,7 @@
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Overview</h1>
  <div class="alert alert-info">
-<p>We are constantly improving the Payroll <strong>webpages</strong> to <strong>optimize the user experience</strong>. The webpages are updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong> that is not available in the guide.</p>
+<p>We are constantly improving the Payroll <strong>webpages</strong> to <strong>optimize the user experience</strong>. The webpages are updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong> that is not available in the guide RC4110. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
  </div>
  
 <div id="ajax-classification">
