--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -80,8 +80,8 @@
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the income tax, payroll and GST/HST tax obligations </a></li>
 
-<li><a href="status-full-text.html" class="hidden-xs hidden-sm">Full-text guide - RC4110 Employee or self-employed?</a>
-      <a href="status-full-text.html#gc-document-nav" class="visible-xs visible-sm">Full-text guide - RC4110 Employee or self-employed?</a></li>
+<li><a href="status-full-text.html" class="hidden-xs hidden-sm">Full-text - RC4110 Employee or self-employed?</a>
+      <a href="status-full-text.html#gc-document-nav" class="visible-xs visible-sm">Full-text - RC4110 Employee or self-employed?</a></li>
 
  </ul>
  
@@ -92,7 +92,7 @@
 <h1 property="name" id="wb-cont" class="gc-thickline">Determine if a contract is valid</h1>
  <div id="ajax-classification">
 <div class="alert alert-warning">
-<p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
+<p>We are constantly improving the Payroll <strong>webpages</strong> to <strong>optimize the user experience</strong>. Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling.  They are updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong> that is not available in guide RC4110.</p>
 </div>
 
 
