--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -97,7 +97,24 @@
 
 
 <p>There must be a valid contract in place to determine if the engagement is considered as employment or self-employment. To use the guidance on the worker classification, there must be, or will be, a valid contract in place.</p>
-<h2 class="h3">On this page</h2>
+
+<h3>You have the choice to read the same information in <strong>2</strong> different formats:</h3>			 
+<ul class="cnjnctn-type-or cnjnctn-sm">
+	<li class="cnjnctn-col"><a href="#tab1">Interactive questions</a> to get specific results, factors and indicators </li>
+	<li class="cnjnctn-col"><a href="#tab2">Read full-text</a> information </li>
+	</ul>
+  <div class="wb-tabs mrgn-tp-lg ignore-session">
+    <div class="tabpanels">
+      <details><summary><span class="fas fa-check text-success fa-lg "></span> <strong>Great choice!</strong> Answer interactive questions</summary>
+   
+<div class="alert alert-warning">
+<p id="tab1">Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
+</div></details>
+
+ <details>
+        <summary>Read full-text</summary>
+
+<h2 id="tab2">On this page</h2>
   	
 <ul>
 <li><a href="#h_1">What is considered a valid contract</a></li>
@@ -166,7 +183,7 @@
 <li>When both the obligations and the consideration set out in the contract have been satisfied (once a contract is completed, it is at its cessation) </li>
 </ul>
 </div>
-
+</details></div></div>
 
 <h2 id="h_4">References</h2>
 
