--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -64,8 +64,9 @@
 <div class="row">
             
 <div class="col-md-8">
-<p>It is important to determine if a worker is an <strong>employee</strong>, a <strong>self-employed individual</strong> or a <strong>personal services business</strong>. Employment status directly affects a person's entitlement to employment insurance (EI) benefits under the <a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">Employment Insurance Act</a>. It can also have an impact on how a worker is treated under other legislation such as the <a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">Canada Pension Plan</a> and the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-3.3/index.html">Income Tax Act</a>.</p>
-
+<div id="ajax-classification">
+<p>It is important to determine if a worker is an <strong>employee</strong>, a <strong>self-employed individual</strong> or has a <strong>personal services business</strong> (PSB). Employment status directly impacts on how a worker is treated under specific legislation such as the <a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">Canada Pension Plan</a>, <a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">Employment Insurance Act</a> and the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-3.3/index.html">Income Tax Act</a>.</p>
+</div>
  	
 <nav class="provisional gc-subway">
   <h2>Sections</h2>
@@ -85,7 +86,7 @@
    <dd>Find links to your tax obligations depending on your situation, including how to request penalty or interest relief  </dd>
 
  <dt>    <a href="status-full-text.html">Full-text guide - RC4110 Employee or self-employed?</a>  </dt>
-   <dd>You can read the same information in full-text using the guide RC4110, it does <strong>not</strong> include interactive questions, indicators and legislative references available on the other webpages</dd>
+   <dd>You can read the same information in full-text using guide RC4110, it does <strong>not</strong> include interactive questions, indicators and legislative references available on the other webpages</dd>
  
 </dl>            
 
