--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -97,8 +97,7 @@
 <p>We are constantly improving the Payroll <strong>webpages</strong> to <strong>optimize the user experience</strong>. The webpages are updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong> that is not available in the guide RC4110. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
  </div>
  
-<div id="ajax-classification">
-<p>It is important to determine if a worker is an <strong>employee</strong>, a <strong>self-employed individual</strong> or has a <strong>personal services business</strong> (PSB). Employment status directly impacts on how a worker is treated under specific legislation such as the <a href="http://laws-lois.justice.gc.ca/eng/acts/C-8/index.html">Canada Pension Plan</a>, <a href="http://laws-lois.justice.gc.ca/eng/acts/E-5.6/index.html">Employment Insurance Act</a> and the <a href="http://laws-lois.justice.gc.ca/eng/acts/I-3.3/index.html">Income Tax Act</a>.</p>
+<div data-ajax-replace="/cra-arc/payroll/guidance/index.html#ajax-classification"></div>
 
 <h2 class="h3">On this page</h2>
   	
