--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -110,7 +110,8 @@
 <div class="alert alert-warning">
 <p id="tab1">Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
 </div>
-<p>Answer a few questions to determine if a contract is valid.</p>
+<h2>Answer a few questions to determine if a contract is valid</h2>
+<p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
   <div id="interactive">
 <div id="ajax-contract-det"><div class="wb-frmvld gc-font-2019"><form method="get">
@@ -169,28 +170,40 @@
 
  <div id="results-contract" class="mrgn-tp-lg" aria-live="polite">
 
-<div id="ajax-q1-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
-<h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Contract is not valid</h4>
-<p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
-</div>
+  <div id="ajax-q1-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
+              <h3><small>Your result </small><br>
+                There are no compensation or reward for a party to carry out its obligations under the contract</h3>
+<h4>Indicator: Contract is not valid</h4>    
+ <p>There must be compensation or a reward for a party to carry out its obligations under the contract to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
+            </div>
+
 
 <div id="ajax-q2-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
-<h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Contract is not valid</h4>
-<p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
+ <h3><small>Your result </small><br>
+                The parties involved are not legally capable of entering into a contract</h3>
+
+<h4>Indicator: Contract is not valid</h4>
+<p>The parties involved must be legally capable of entering into the contract to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
 </div>
 
 <div id="ajax-q3-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
-<h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Contract is not valid</h4>
-<p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
+ <h3><small>Your result </small><br>
+                The object of the contract is not legitimate</h3>
+
+<h4>Indicator: Contract is not valid</h4>
+<p>The object of the contract must be legitimate to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
 </div>
 
 <div id="ajax-q4-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
-<h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Contract is not valid</h4>
-<p>If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
+ <h3><small>Your result </small><br>
+               The agreement is not mutual</h3>
+
+<h4>Indicator: Contract is not valid</h4>
+<p>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms) to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>
 </div>
 
 <div id="ajax-q4-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-success">
-<h4><span class="fas fa-user text-primary fa-1x"> </span> Indicator: Contract is valid</h4>
+<h4>Indicator: Contract is valid</h4>
 <p>Add more details here.</p>
 <p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Guidance on the worker classification</a> .</p>
 </div>
