--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -112,6 +112,44 @@
 </div>
 <h2>Answer a few questions to determine if a contract is valid</h2>
 <p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
+<details> <summary>Examples of questions the CRA may ask you to determine the validity and the terms of the contract</summary>
+<h3 id="h_1_1">Validity of a contract</h3>
+<ul>
+<li>Are the parties to the contract of legal age (as per the respective provincial Employment Standards site)? If the worker is not of legal age, have the parents or legal guardians provided written consent for the minor child to work? </li>
+<li>Did the parties have any mental disabilities that would prevent them from understanding the nature of the contract? </li>
+<li>What was the offer, which is, what was the worker hired to do? </li>
+<li>What did the worker agree to do? </li>
+<li>Where was the work to be performed? </li>
+<li>What was the agreed consideration for providing the service? </li>
+<li>Was there an agreed method of payments? </li>
+<li>Was there an agreed duration for the service to be performed? </li>
+<li>Is the party a citizen or permanent resident of Canada? If no, does the party have a work permit to legally work in Canada?</li>
+</ul>
+
+
+<h3 id="h_1_2">Intent of the parties</h3>
+<ul>
+<li>When you first entered into the agreement, what was your understanding of the work relationship (employee or self-employed)? </li>
+<li>Why do you feel that you were an employee or a self-employed person? </li>
+<li>Was there a written contract? Was the contract signed by both parties? </li>
+<li>Were there any amendments to the original agreement? If yes, was it verbal or written? You may need to provide details of the verbal amendments or you may need to provide a copy of the amendments. </li>
+</ul>
+<h3 id="h_1_3">Documents to review</h3>
+<ul>
+<li>Payer's payroll records - Is the worker listed on payer's payroll? </li>
+<li>Were there CPP, EI or income tax deductions withheld from the worker's pay? </li>
+<li>Was a pay stub given to the worker when he/she was remunerated? </li>
+<li>Was the worker issued a T4 information slip? </li>
+<li>In addition to remuneration, did the worker receive vacation pay, paid vacation leave, statutory holiday or sick leave? </li>
+<li>Did the worker participate or belong to the payer's private pension plan? </li>
+<li>Is the worker entitled or belonged to the payer's benefit plans, for example: fitness membership, medical or dental plans? </li>
+<li>Is the worker listed as part of the staff in the payer's staff phone directory or payer's website? </li>
+<li>Is the worker named as part of the staff in any of the payer's business brochure? </li>
+<li>Did the payer provide business cards to the worker? If yes, did the business cards bear the payer's business name? What was the worker's title or position listed on the business cards? </li>
+</ul>
+
+</details>
+
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
   <div id="interactive">
 <div id="ajax-contract-det"><div class="wb-frmvld gc-font-2019"><form method="get">
