--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -154,7 +154,7 @@
   <div id="interactive">
 <div id="ajax-contract-det"><div class="wb-frmvld gc-font-2019"><form method="get">
 	<div class="wb-fieldflow" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>
-		<p>Is there compensation or reward for a party to carry out its obligations under the contract?</p>
+		<p>Is there an offer and an acceptance of the terms and conditions of the agreement from the parties?</p>
 		<ul>
 		<li>Yes
 		<div class="wb-fieldflow-sub" data-wb-fieldflow='{"renderas":"radio", "inline":true, "gcChckbxrdio":true, "noForm": true, "isoptional": true}'>	
@@ -210,9 +210,9 @@
 
   <div id="ajax-q1-contract-no" class="hidden wb-frmvld gc-font-2019 alert alert-warning">
               <h3><small>Your result </small><br>
-                There are no compensation or reward for a party to carry out its obligations under the contract</h3>
+                There are no offer and an acceptance of the terms and conditions of the agreement from the parties</h3>
 <h4>Indicator: Contract is not valid</h4>    
- <p>There must be compensation or a reward for a party to carry out its obligations under the contract to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
+ <p>There must be an offer and an acceptance of the terms and conditions of the agreement from the parties to be considered a valid contract. If the contract is not valid, you need to carefully determine the actual relationship when making your determination.</p>       
             </div>
 
 
@@ -241,8 +241,12 @@
 </div>
 
 <div id="ajax-q4-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-success">
+ <h3><small>Your result </small><br>
+             The agreement is mutual</h3>
 <h4>Indicator: Contract is valid</h4>
-<p>Add more details here.</p>
+
+<div data-ajax-replace="#ajax-contract"></div>
+
 <p>Continue to: <a href="https://test.canada.ca/cra-arc/payroll/guidance/factors.html">Guidance on the worker classification</a> .</p>
 </div>
 
@@ -262,10 +266,10 @@
 </ul>
 
 <h2 id="h_1">What is considered a valid contract</h2>
-<div id="ajax-contract">
+
 <p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
 
-
+<div id="ajax-contract">
  <div class="table-responsive">
       <table class="table table-striped small table-condensed">
         <caption class="wb-inv">
@@ -300,7 +304,7 @@
 	<td>The agreement must be mutual (for example, the parties must have the intention to enter into the contract and be bound by its terms)</td>
 	<td>Consent/Intent to be legally bound </td>
 </tr> </tbody> </table>
-
+</div></div>
 <h2 id="h_2">Who decides when a contract is null and void</h2>
 <p>When addressing the issue of statutory illegality, the courts can decide that a contract is null and void from the beginning (void ab initio) if the formation of the contract was prohibited by statute and if, in the court's assessment, it would not be contrary to public policy to declare the contract void ab initio.</p>
 
