--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -92,7 +92,7 @@
 <h1 property="name" id="wb-cont" class="gc-thickline">Determine if a contract is valid</h1>
  <div id="ajax-classification">
 <div class="alert alert-warning">
-<p>We are constantly improving the Payroll <strong>webpages</strong> to <strong>optimize the user experience</strong>. They are updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong> that is not available in guide RC4110.</p>
+<p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
 
@@ -105,7 +105,7 @@
 	</ul>
   <div class="wb-tabs mrgn-tp-lg ignore-session">
     <div class="tabpanels">
-      <details><summary><span class="fas fa-check text-success fa-lg "></span> <strong>Great choice!</strong> Answer interactive questions</summary>
+      <details><summary>Answer interactive questions</summary>
    
 <div class="alert alert-warning">
 <p id="tab1">Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
