--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -91,7 +91,7 @@
 
 <h1 property="name" id="wb-cont" class="gc-thickline">Determine if a contract is valid</h1>
  <div id="ajax-classification">
-<div class="alert alert-warning">
+<div class="alert alert-info">
 <p>Content has been updated for <strong>clarity, completeness and plain language</strong>, including <strong>additional examples and legislative references</strong>.</p>
 </div>
 
