--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -241,8 +241,8 @@
 
 <div id="ajax-q4-contract-yes" class="hidden wb-frmvld gc-font-2019 alert alert-success">
  <h3><small>Your result </small><br>
-             The agreement is mutual</h3>
-<h4>Indicator: Contract is valid</h4>
+             Indicator: Contract is valid</h3>
+<p>Generally, all of the following must apply to be considered a valid contract:</p>
 
 <div data-ajax-replace="#ajax-contract"></div>
 
