--- a/payroll/guidance/contract.html
+++ b/payroll/guidance/contract.html
@@ -146,7 +146,7 @@
 <div class="alert alert-warning">
 <p id="tab1">Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
 </div>
-<h2>Answer a few questions to determine if a contract is valid</h2>
+<h2>Answer a few questions for guidance on how to determine if a contract is valid</h2>
 <p>Contracts can be formed either orally or in writing. An oral contract is as valid and enforceable as a written contract.</p>
 
 <p class="text-muted small">Make a selection and <strong> scroll down</strong> for further questions or results</p>
