--- a/payroll/guidance/index.html
+++ b/payroll/guidance/index.html
@@ -78,9 +78,11 @@
 <dt>    <a href="contract.html">Determine if a contract is valid</a>  </dt>
   <dd>Information on what is considered a valid contract, who decides when a contract is null and void and what are examples of contracts that are terminated  </dd>
 
+<dt>    <a href="factors-psb.html">Determine if the worker is an incorporated employee</a>  </dt>
+  <dd>Information on the factors to consider to determine if the worker is an incorporated employee, special rules may apply to their corporation for income tax purposes if  an individual performs the services on behalf of their own corporation (personal services business) </dd>
 	
-  <dt>    <a href="factors.html">Guidance on the worker classification</a>  </dt>
-  <dd>Information on the factors to consider to determine if the worker is an employee or self-employed, this includes if a worker is a personal services business  </dd>
+  <dt>    <a href="factors-federal2.html">Determine where the contract was formed</a>  </dt>
+  <dd>Information on the factors to consider depending on where the contract was formed. The factors are different if the contract is formed in the province of Quebec or in any other province or territory (unless the contract states differently).  </dd>
 
 <dt>    <a href="after.html">Understand the income tax, payroll and GST/HST tax obligations</a>  </dt>
    <dd>Find links to your tax obligations depending on your situation, including how to request penalty or interest relief  </dd>
