--- a/payroll/guidance/overview.html
+++ b/payroll/guidance/overview.html
@@ -75,9 +75,11 @@
 <li><a href="contract.html" class="hidden-xs hidden-sm">Determine if a contract is valid </a>
       <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if a contract is valid</a></li>
 
+<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
+      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
-<li><a href="factors.html" class="hidden-xs hidden-sm">Guidance on the worker classification</a>
-      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Guidance on the worker classification</a></li>
+<li><a href="factors.html" class="hidden-xs hidden-sm">Determine where the contract was formed</a>
+      <a href="factors.html#gc-document-nav" class="visible-xs visible-sm">Determine where the contract was formed</a></li>
 
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm"> Understand the income tax, payroll and GST/HST tax obligations </a></li>
