--- a/payroll/guidance/factors.html
+++ b/payroll/guidance/factors.html
@@ -8,7 +8,7 @@
       <head>
          <meta charset="utf-8">
          <!-- Web Experience Toolkit (WET) / Boîte à outils de l'expérience Web (BOEW) wet-boew.github.io/wet-boew/License-en.html / wet-boew.github.io/wet-boew/Licence-fr.html -->
-         <title>Guidance on the worker classification - Determine the employment status - Canada.ca</title>
+         <title>Determine where the contract was formed - Determine the employment status - Canada.ca</title>
          <meta content="width=device-width,initial-scale=1" name="viewport">
          <meta name="robots" content="noindex, follow">
          <!-- Meta data -->
@@ -75,35 +75,33 @@
 <li><a href="contract.html" class="hidden-xs hidden-sm">Determine if the contract is valid </a>
       <a href="contract.html#gc-document-nav" class="visible-xs visible-sm">Determine if the contract is valid</a></li>
 
+<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Determine if the worker is an incorporated employee </a>
+      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm">Determine if the worker is an incorporated employee</a></li>
 
- <li>	 <a href="factors.html" class="active" aria-current="page">Guidance on the worker classification</a>	
+
+ <li>	 <a href="factors.html" class="active" aria-current="page">Determine where the contract was formed</a>	
 
 <ul class="noline">
 
-   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Province or territory other than Quebec</a>
-      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm"> Province or territory other than Quebec </a></li>
+   <li><a href="factors-federal.html" class="hidden-xs hidden-sm">Contract formed in a province or territory other than Quebec</a>
+      <a href="factors-federal.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in a province or territory other than Quebec </a></li>
   
   
-<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Province of Quebec</a>
-      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm"> Province of Quebec</a></li>
+<li><a href="factors-quebec.html" class="hidden-xs hidden-sm">Contract formed in the province of Quebec</a>
+      <a href="factors-quebec.html#gc-document-nav" class="visible-xs visible-sm">Contract formed in the province of Quebec</a></li>
  
-<li><a href="factors-psb.html" class="hidden-xs hidden-sm">Personal services business (PSB)</a>
-      <a href="factors-psb.html#gc-document-nav" class="visible-xs visible-sm"> Personal services business (PSB)</a></li>
                            
                             </ul>
  </li>
 <li><a href="after.html" class="hidden-xs hidden-sm">Understand the income tax, payroll and GST/HST tax obligations</a>
       <a href="after.html#gc-document-nav" class="visible-xs visible-sm">Understand the income tax, payroll and GST/HST tax obligations </a></li>
 
-<li><a href="status-full-text.html" class="hidden-xs hidden-sm">Full-text guide - RC4110 Employee or self-employed?</a>
-      <a href="status-full-text.html#gc-document-nav" class="visible-xs visible-sm">Full-text guide - RC4110 Employee or self-employed?</a></li>
-
  </ul>
  
 </nav>
 
 
-<h1 property="name" id="wb-cont" class="gc-thickline">Guidance on the worker classification</h1>
+<h1 property="name" id="wb-cont" class="gc-thickline">Determine where the contract was formed</h1>
  
 <div class="alert alert-warning">
 <p>Content has been developed to provide guidance only. The guidance does not replace the law and does not replace a formal request for a ruling. <strong>No changes were made to the existing federal legislative requirement. </strong></p>
@@ -114,53 +112,10 @@
 <h2 class="h3">On this page</h2>
   	
 <ul>
-<li><a href="#h_1">Determine if a valid contract exists</a></li>
 <li><a href="#h_2">Type of information you need to use the guidance</a></li>
 <li><a href="#h_3">Determine where the contract was formed</a></li>
 </ul>
 
-<h2 id="h_1">Determine if a valid contract exists</h2>
-
-<p>There <strong>must be a valid contract</strong> in place to see if the engagement is considered as employment or self-employment. </p>
-<p>Learn more: <a href="/cra-arc/payroll/guidance/contract.html">Determine if a contract is valid</a>.</p>
-
-<details> <summary>Examples of questions the CRA may ask you to determine the validity and the terms of the contract</summary>
-<h3 id="h_1_1">Validity of a contract</h3>
-<ul>
-<li>Are the parties to the contract of legal age (as per the respective provincial Employment Standards site)? If the worker is not of legal age, have the parents or legal guardians provided written consent for the minor child to work? </li>
-<li>Did the parties have any mental disabilities that would prevent them from understanding the nature of the contract? </li>
-<li>What was the offer, which is, what was the worker hired to do? </li>
-<li>What did the worker agree to do? </li>
-<li>Where was the work to be performed? </li>
-<li>What was the agreed consideration for providing the service? </li>
-<li>Was there an agreed method of payments? </li>
-<li>Was there an agreed duration for the service to be performed? </li>
-<li>Is the party a citizen or permanent resident of Canada? If no, does the party have a work permit to legally work in Canada?</li>
-</ul>
-
-
-<h3 id="h_1_2">Intent of the parties</h3>
-<ul>
-<li>When you first entered into the agreement, what was your understanding of the work relationship (employee or self-employed)? </li>
-<li>Why do you feel that you were an employee or a self-employed person? </li>
-<li>Was there a written contract? Was the contract signed by both parties? </li>
-<li>Were there any amendments to the original agreement? If yes, was it verbal or written? You may need to provide details of the verbal amendments or you may need to provide a copy of the amendments. </li>
-</ul>
-<h3 id="h_1_3">Documents to review</h3>
-<ul>
-<li>Payer's payroll records - Is the worker listed on payer's payroll? </li>
-<li>Were there CPP, EI or income tax deductions withheld from the worker's pay? </li>
-<li>Was a pay stub given to the worker when he/she was remunerated? </li>
-<li>Was the worker issued a T4 information slip? </li>
-<li>In addition to remuneration, did the worker receive vacation pay, paid vacation leave, statutory holiday or sick leave? </li>
-<li>Did the worker participate or belong to the payer's private pension plan? </li>
-<li>Is the worker entitled or belonged to the payer's benefit plans, for example: fitness membership, medical or dental plans? </li>
-<li>Is the worker listed as part of the staff in the payer's staff phone directory or payer's website? </li>
-<li>Is the worker named as part of the staff in any of the payer's business brochure? </li>
-<li>Did the payer provide business cards to the worker? If yes, did the business cards bear the payer's business name? What was the worker's title or position listed on the business cards? </li>
-</ul>
-
-</details>
 
 <h2 id="h_2">Type of information you need to use the guidance</h2>
 <p>To use the guidance, the following are examples of information you need to know:</p>
